# odt2html

./: .gitignore  Makefile  NOTES.md  README.md  TODO.md  epubcheck  odt2html  pyproject.toml
lib/odt2html/: player-backend-v9.css  player-backend-v9.js  player-v1.css  player-v1.js  player-v10.js  player-v11.js  player-v12.js  player-v13.js  player-v2.css  player-v2.js  player-v3.css  player-v4.js  player-v6.js  player-v7.css  player-v7.js  player-v8.css  player-v8.js  player-v9.css  player-v9.js  zoom_image-v1.js
lib/odt2html/player-v10/: backend.js  backend.min.css  backend.min.js
lib/odt2html/player-v12/: backend.css  backend.js
lib/odt2html/player-v13/: backend.js  highlighter.js
lib/odt2html/player-v14/: backend.js  backend.min.css  backend.min.js  highlighter.min.js  hls.min.js
odt2html/: config.py  converter.py  dirindexes.py  epub.py  exceptions.py  graphics.py  hyperlinks.py  images.py  linter.py  metadata.py  odf_tool.py  parser.py  styles.py  tdsound.py  template.py  utils.py  wrapped_tables.py
odt2html/assets/: player-v14.js  zoom_image-v1.css  zoom_image-v1.js
odt2html/assets/player-v14/: backend.css
odt2html/cli/: odf_tool.py  odf_vim.py  odt2html.py  odt2html_mkmanifest.py
tests/: Makefile  basic-template.html
